--- a/Team_Rudra-main/facultyInfo.html
+++ b/Team_Rudra-main/facultyInfo.html
@@ -96,8 +96,7 @@
       </div>
 
       <div class="text-2xl font-bold text-center px-4 mt-10">
-        “Our faculty didn’t build the car — they built the mindset. The mindset to question, to create, <br>
-        to own every inch of this machine.”
+        “Our faculty didn’t build the car — they built the mindset. A mindset to question, to create, and to own every inch of this machine — a mindset we, the students, turned into reality”
       </div>
 
       
